# Mesh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  limine.sh  run.sh
.github/workflows/: release.yml
lib/: limine.conf  linker.ld
src/arch/: acpi.cpp  gdt.cpp  gdt.h  idt.cpp  idt.h  irq.cpp  isr.cpp  isr.h  lapic.cpp  smp.cpp
src/arch/asm/: boot.asm  idt.asm
src/arch/common/: atomic.cpp  atomic.h  spinlock.cpp  spinlock.h
src/arch/x86_64/: acpi.cpp  cpu.cpp  gdt.cpp  gdt.h  idt.cpp  idt.h  irq.cpp  isr.cpp  isr.h  lapic.cpp  smp.cpp
src/asm/: boot.asm  smp.asm  switch.asm  timer.asm  yield.asm
src/boot/: limine.c  limine.h  smp.asm
src/core/: kernel.cpp  limine.c  limine.h  panic.cpp  utils.cpp  utils.h
src/drivers/: io.cpp  io.h  keyboard.cpp  renderer.cpp  renderer.h  serial.cpp
src/drivers/io/: io.cpp  io.h
src/drivers/io/keyboard/: keyboard.cpp  keyboard.h
src/drivers/io/pit/: pit.cpp  pit.h
src/drivers/io/serial/: serial.cpp  serial.h
src/drivers/video/: renderer.cpp  renderer.h
src/include/arch/: gdt.h  isr.h
src/include/arch/x86_64/: acpi.h  cpu.h  idt.h  isr.h  lapic.h  smp.h
src/include/core/: limine.h  panic.h  utils.h
src/include/drivers/: keyboard.h  renderer.h  serial.h
src/include/memory/: atomic.h  buddy.h  paging.h  slab.h  spinlock.h  vmm.h
src/include/task/: scheduler.h  task.h
src/kernel/arch/: acpi.cpp  acpi.h  gdt.cpp  gdt.h  idt.cpp  idt.h  irq.cpp  irq.h  isr.cpp  isr.h
src/kernel/boot/: limine.c  limine.h
src/kernel/core/: kernel.cpp  panic.cpp  panic.h  utils.cpp  utils.h
src/kernel/sync/: atomic.cpp  atomic.h  spinlock.cpp  spinlock.h
src/memory/: atomic.cpp  buddy.cpp  lapic.cpp  lapic.h  paging.cpp  paging.h  slab.cpp  smp.cpp  smp.h  spinlock.cpp  vmm.cpp
src/task/: scheduler.cpp  task.cpp
